# kayon

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: catalog-refresh.yml  release.yml
scripts/: fetch-runtime.ps1
src/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  runtime-pin.json  tauri.conf.json
src-tauri/catalog/: catalog.json  catalog.json.sig  catalog.source.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/download/: mod.rs
src-tauri/src/fit/: mod.rs
src-tauri/src/gguf/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/ollama/: mod.rs
src-tauri/src/probe/: mod.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/telemetry/: mod.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/update/: mod.rs
src/scripts/: copy-pdfjs.mjs
src/src/: App.tsx  design.css  index.css  main.tsx
src/src/components/: Modal.tsx  ProgressBar.tsx  UpdateBar.tsx  VerdictBadge.tsx  Viewer.tsx  icons.tsx
src/src/lib/: api.ts
src/src/pages/: Browser.tsx  Chat.tsx  Dashboard.tsx  Library.tsx  Onboarding.tsx  Privacy.tsx  Settings.tsx
